--- a/scss/components/_about.scss
+++ b/scss/components/_about.scss
@@ -17,6 +17,10 @@
         font-size: 1.8rem;
         padding: 1rem;
         border-radius: 5px;
+        transition: background-color 0.5s;
+        &:hover {
+            background-color: $yellow;
+        }
       }
     }
   }
