--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -8,7 +8,7 @@
     padding: 0;
     .nav_brand{
         transition: all 0.3s;
-        width: 65%;
+        width: 105px;
     }
     .navbar-nav {
       .nav-item {
