--- a/css/style.css
+++ b/css/style.css
@@ -198,7 +198,7 @@ body {
 }
 
 #about .about__skill .skill__details {
-  height: 50vh;
+  height: 500px;
 }
 
 #about .about__skill .skill__details .progress {
