--- a/scss/base/_root.scss
+++ b/scss/base/_root.scss
@@ -47,6 +47,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
-  
+}
+
+.heading__section_mb {
+  margin-bottom: 100px;
+}
+
+.content__padding {
+  padding: 100px 0;
 }
 
