--- a/scss/helper/_variable.scss
+++ b/scss/helper/_variable.scss
@@ -1,6 +1,9 @@
 $yellow: #d6b161;
 $black: #323232;
 $dark: #333;
+$black2: #222;
 $light: #fff;
+$grey: #909090;
+$bgGrey :#f8f8f8 ;
 $overlay-dark: rgba(0, 0, 0, .7);
 $overlay-light: rgba(255, 255, 255, .9);
