--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,6 +9,9 @@
 @import './components/services';
 @import './components/feature';
 @import './components/blog';
+@import './components/testimonial';
+@import './components/video-demo';
 @import './components/price-table';
+@import './components/purchase';
 @import './components/contact';
 @import './components/footer'
