--- a/scss/components/_services.scss
+++ b/scss/components/_services.scss
@@ -1,5 +1,5 @@
 #services {
-    overflow: hidden;
+  overflow: hidden;
   .services__item {
     transition: all 0.3s;
     margin-bottom: -1px;
@@ -61,6 +61,19 @@
         height: 12px;
         border-radius: 50%;
         margin-right: 0.8rem;
+      }
+    }
+  }
+}
+
+@media (max-width: 576px) {
+  #services {
+    .feedback {
+      .carousel-indicators {
+        left: 0;
+      }
+      .carousel-item{
+        text-align: center;
       }
     }
   }
