--- a/scss/components/_about.scss
+++ b/scss/components/_about.scss
@@ -1,79 +1,113 @@
 #about {
-    .about__item {
+  .about__item {
+    border-radius: 5px;
+    p {
+      line-height: 1.2rem;
+    }
+    .about__icon-wrapper {
+      position: relative;
+      top: -40px;
+      left: -10px;
+      padding: 10px;
+      background: #fff;
+      display: inline;
+      .about__icon {
+        background-color: $dark;
+        color: $light;
+        font-size: 1.8rem;
+        padding: 1rem;
         border-radius: 5px;
-        p {
-            line-height: 1.2rem;
+        transition: background-color 0.5s;
+        &:hover {
+          background-color: $yellow;
         }
-        .about__icon-wrapper {
-            position: relative;
-            top: -40px;
-            left: -10px;
-            padding: 10px;
-            background: #fff;
-            display: inline;
-            .about__icon {
-                background-color: $dark;
-                color: $light;
-                font-size: 1.8rem;
-                padding: 1rem;
-                border-radius: 5px;
-                transition: background-color 0.5s;
-                &:hover {
-                    background-color: $yellow;
-                }
-            }
-        }
+      }
     }
+  }
+  .about__skill {
+    background: url("../../img/parallax/4.jpg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    position: relative;
+    h3 {
+      letter-spacing: 2px;
+    }
+    .skill__details {
+      height: 500px;
+      .progress {
+        background-color: #606060;
+        border-radius: 0;
+        height: 1.3rem;
+        overflow: visible;
+        width: 0;
+        transition: ease-in 1s;
+        .progress-bar {
+          position: relative;
+          span {
+            display: inline-block;
+            position: absolute;
+            width: 35px;
+            text-align: center;
+            top: -30px;
+            right: 5px;
+            background-color: #a4a4a4;
+            color: $dark;
+            border-radius: 20px;
+            &::before {
+              content: "";
+              width: 5px;
+              height: 5px;
+              transform: rotate(45deg);
+              position: absolute;
+              bottom: -2px;
+              left: 15px;
+              background-color: #a4a4a4;
+            }
+          }
+        }
+      }
+    }
+  }
+  .bg__overlay {
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+}
+@media (max-width: 768px) {
+  #about {
     .about__skill {
-        background: url("../../img/parallax/4.jpg");
-        background-size: cover;
-        background-position: center;
-        background-attachment: fixed;
-        position: relative;
-        h3 {
-            letter-spacing: 2px;
-        }
-        .skill__details {
-            height: 500px;
-            .progress {
-                background-color: #606060;
-                border-radius: 0;
-                height: 1.3rem;
-                overflow: visible;
-                width: 0;
-                transition:  ease-in 1s;
-                .progress-bar {
-                    position: relative;
-                    span {
-                        display: inline-block;
-                        position: absolute;
-                        width: 35px;
-                        text-align: center;
-                        top: -30px;
-                        right: 5px;
-                        background-color: #a4a4a4;
-                        color: $dark;
-                        border-radius: 20px;
-                        &::before {
-                            content: "";
-                            width: 5px;
-                            height: 5px;
-                            transform: rotate(45deg);
-                            position: absolute;
-                            bottom: -2px;
-                            left: 15px;
-                            background-color: #a4a4a4;
-                        }
-                    }
-                }
-            }
-        }
+    //   height: 100vh;
+      .col-12:nth-child(2) {
+          height: 40vh;
+          h3 {
+              font-size: 1.2rem;
+              letter-spacing: 6px;
+          }
+      }
+      .skill__details {
+        height: 60vh;
+      }
     }
-    .bg__overlay {
-        position: absolute;
-        width: 50%;
-        height: 100%;
-        right: 0;
-        background-color: rgba(0, 0, 0, 0.5);
-    }
+  }
+}
+@media (max-width: 576px) {
+    #about {
+        .about__skill {
+        //   height: 100vh;
+          .col-12:nth-child(2) {
+              height: 25vh;
+              h3 {
+                  font-size: 1.2rem;
+                  letter-spacing: 6px;
+              }
+          }
+          .skill__details {
+            height: 75vh;
+          }
+        }
+      }
 }
