--- a/scss/components/_home.scss
+++ b/scss/components/_home.scss
@@ -19,6 +19,9 @@
         height: 100vh;
         background-size: cover;
         background-position: top center;
+        span {
+          font-size: 1.2rem;
+        }
       }
     }
     .carousel-control-prev {
