Hoàn thành phần layout và css phần đc giao

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,5 +13,6 @@
 @import './components/video-demo';
 @import './components/price-table';
 @import './components/purchase';
+@import './components/client';
 @import './components/contact';
 @import './components/footer'
