--- a/css/style.css
+++ b/css/style.css
@@ -978,4 +978,116 @@ body {
 #purchase .purchase__form input[type="text"]:focus {
   outline: 0;
 }
+
+#contact .contact__info {
+  background: url(../../img/parallax/15.jpg) no-repeat center;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+#contact .contact__info .info__item {
+  text-align: center;
+}
+
+#contact .contact__info .info__item i,
+#contact .contact__info .info__item h4,
+#contact .contact__info .info__item p {
+  color: #fff;
+}
+
+#contact .contact__info .info__item i {
+  padding: 0 0 30px 0;
+  font-size: 36px;
+  display: block;
+}
+
+#contact .contact__info .info__item h4 {
+  margin-bottom: 20px;
+  letter-spacing: 1px;
+  font-weight: normal;
+}
+
+#contact #formContact input {
+  height: 40px;
+  border-radius: 0;
+}
+
+#contact #formContact textarea {
+  width: 100%;
+  height: 95px;
+}
+
+#contact #formContact .btn-black {
+  color: #fff;
+  background-color: #222;
+  font-size: 0.9rem;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  padding: 1rem 2rem;
+}
+
+#contact #formContact .btn-black:hover {
+  background-color: #d6b161;
+}
+
+#contact #formContact .btn-small {
+  height: 100%;
+  width: 100%;
+  padding: 10px 20px;
+}
+
+#footer {
+  background-color: #f8f8f8;
+}
+
+#footer .footer__header p {
+  margin: 15px 0;
+  letter-spacing: 2px;
+  color: #222;
+  font-size: 12px;
+}
+
+#footer .footer__media {
+  width: 50%;
+  margin: 0 auto;
+}
+
+#footer .footer__media ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-top: 80px;
+  margin-bottom: 80px;
+  width: 100%;
+}
+
+#footer .footer__media ul li {
+  padding: 0 1rem;
+}
+
+#footer .footer__media ul li a {
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  border: 1px solid #222;
+  border-radius: 50%;
+  line-height: 40px;
+  display: block;
+}
+
+#footer .footer__copyright h4 {
+  letter-spacing: 2px;
+  color: #000;
+  font-size: 14px;
+}
+
+#footer .footer__copyright p {
+  letter-spacing: 2px;
+  font-size: 12px;
+}
 /*# sourceMappingURL=style.css.map */
